name:                opvault
version:             0.1.0.0
synopsis:            Decryption system for .opvault files
description:         Please see README.md
homepage:            http://github.com/crough/opvault
license:             MPL-2.0
license-file:        LICENSE
author:              Alex Crough
maintainer:          alex@crough.io
copyright:           (c) 2015
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:          ./test-vault/default/*.js
                   , ./test-vault/default/*.attachment
                   , ./test-vault/default-bad/*.js

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.OPVault
                     , Crypto.OPVault.Encryption
                     , Crypto.OPVault.FileSystem
                     , Crypto.OPVault.Types
  other-modules:       Crypto.OPVault.Types.Base64
                     , Crypto.OPVault.Types.Common
                     , Crypto.OPVault.Types.Encryption
                     , Crypto.OPVault.Types.FileTypes
                     , Crypto.OPVault.Types.ItemIndex
                     , Crypto.OPVault.Types.Opdata01
                     , Crypto.OPVault.Types.ResultT
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , attoparsec
                     , base64-bytestring
                     , bytestring
                     , cryptonite
                     , directory
                     , exceptions
                     , hashable
                     , hspec
                     , memory
                     , text
                     , transformers
                     , unordered-containers

test-suite opv-spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  build-depends:       base
                     , opvault
                     , hspec
                     , transformers
                     , unordered-containers
                     , vector

source-repository head
  type:     git
  location: https://github.com/crough/opvault
